# multi-agent-sgp-demo

./: .env.example  .gitignore  .gitmodules  PROFILING.md  README.md  docker-compose.yaml
async_chat_agent_example/: Dockerfile  README.md  manifest.yaml  pyproject.toml
async_chat_agent_example/project/: acp.py  openai_client.py
langchain_chat_agent_example/: Dockerfile  README.md  dev.ipynb  environments.yaml  manifest.yaml  pyproject.toml
langchain_chat_agent_example/project/: acp.py  graph.py  openai_client.py  profiling.py  tools.py
multi_model_chat_agent/: manifest.yaml  pyproject.toml
multi_model_chat_agent/project/: acp.py  openai_client.py
scripts/: load_test.py  monitor_container.py  run_memory_test.sh
sync_chat_agent_example/: Dockerfile  README.md  manifest.yaml  pyproject.toml
sync_chat_agent_example/project/: acp.py  openai_client.py  tools.py
temporal_chat_agent_example/: Dockerfile  README.md  main.ipynb  manifest.yaml  pyproject.toml  requirements.txt
temporal_chat_agent_example/project/: acp.py  activities.py  model_provider.py  openai_client.py  run_worker.py  workflow.py
