[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain_chat_agent_example"
version = "0.1.0"
description = "An Agentex Langchain agent"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
    "langgraph",
    "langchain-openai",
    "openai",
    "httpx",
    "python-dotenv",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88