[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal_chat_agent_example"
version = "0.1.0"
description = "An AgentEx Temporal Agent"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
    "openai",
    "openai-agents",
    "temporalio[openai-agents]>=1.18.2,<1.24.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
